# LFSC

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  INSTALL  README.md  live.plf
.github/workflows/: main.yml
doc/: README.md  lfsc1_5.g4  lfsc1_5.rrd.html
src/: CMakeLists.txt  a.py  check.cpp  check.h  chunking_memory_management.h  code.cpp  code.h  expr.cpp  expr.h  lexer.flex  lexer.h  lfscc.cpp  lfscc.h  libwriter.cpp  libwriter.h  main.cpp  position.h  print_smt2.cpp  print_smt2.h  scccode.cpp  scccode.h  sccwriter.cpp  sccwriter.h  token.cpp  token.h  trie.cpp  trie.h
tests/: CMakeLists.txt  README.md  run_test.py
tests/tests/: ann_lambda.plf  bad-char.plf  bool.plf  code_macro_app.plf  eq_mpz.plf  error-pr15.plf  formal_type_args.plf  int-vectors.plf  issue20.plf  issue35.plf  issue60.plf  issue66.plf  issue69-sc.plf  issue71-2.plf  issue71.plf  issue8-mpexp.plf  macro_in_let_in_sc.plf  mp_prefix.plf  mp_smaller_test.plf  mpz_to_mpq.plf  mpz_to_mpq_checks.plf  num.plf  redecl.plf  redefn.plf  reopaque.plf  sc_call_in_macro_in_sc.plf  semicolon_after_id.plf  skolem1.plf  skolem2.plf  smt.plf  subs-27-let.plf  sugar_arrow.plf  sugar_assuming.plf  sugar_declare_rule.plf  sugar_declare_type.plf  sugar_define_const.plf  sugar_forall.plf  sugar_lam.plf  sugar_let.plf  sugar_proved_by.plf  (+20 more)
tests/tests_1.5/: eq_mpz.lfsc  formal_type_args.lfsc  sat.lfsc  smt.lfsc  th_arrays.lfsc  th_base.lfsc  th_quant.lfsc
